--- a/Index.html
+++ b/Index.html
@@ -22,8 +22,11 @@
 </nav>
 </header>
 
-
 <section id="home" class="hero">
+<div class="hero-bg">
+<img src="Background.jpg" class="hero-bg-image">
+</div>
+
 <div class="hero-text">
 <h1>Centene Technologies.</h1>
 <h2>People. Process. Techlonogy.</h2>
@@ -32,8 +35,9 @@ Centene Technologies is a modern digital platform built to help teams create, la
 </p>
 
 <div class="buttons">
+<a href="#contact">
 <button class="outline">Get Started</button>
-
+</a>
 </div>
 </div>
 
