--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <section id="home" class="hero">
 <div class="hero-bg">
-<img src="Compguy.jpg" class="hero-bg-image">
+<img src="Compguy.png" class="hero-bg-image">
 </div>
 
 <div class="hero-text">
@@ -84,4 +84,5 @@ Centene Technologies is a modern digital platform built to help teams create, la
 <script src="script.js"></script>
 </body>
 </html>
+
 
